@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 [platformio]
-default_envs = esp32thing-example-skeleton
+default_envs = pico32-example-datetime
 ;
 ; common options for all variants of iotsa
 ;
@@ -22,7 +22,9 @@ lib_deps =
     ArduinoJson
     ArduinoJWT
     CoAP simple library
+    Ds1302
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 
 ;
 ; Debug options, copy or include with ${section.option} syntax
@@ -72,6 +74,10 @@ board = esp32thing
 extends = esp32
 board = lolin32
 
+[pico32]
+extends = esp32
+board = pico32
+
 [example-hello]
 src_filter = +<*> +<../examples/Hello>
 
@@ -118,6 +124,14 @@ build_flags =
 
 [env:lolin32-example-skeleton]
 extends = lolin32, example-skeleton
+
+[example-datetime]
+src_filter = +<*> +<../examples/DateTime>
+build_flags =  ; -DIOTSA_WITH_HTTPS -DIOTSA_WITH_COAP
+
+[env:pico32-example-datetime]
+extends = pico32, example-datetime
+build_flags = ${example-skeleton.build_flags}
 
 [example-bleled]
 src_filter = +<*> +<../examples/BLELed>
